--- a/projekte.html
+++ b/projekte.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE>
+<html lang="de">
+  <head>
+    <meta charset="utf-8">
+    <title>Projekte</title>
+  </head>
+  <body>
+    
+  </body>
