--- a/projekte.html
+++ b/projekte.html
@@ -1,5 +1,13 @@
-<h2>Projekte</h2>
+<!DOCTYPE html>
+<html lang="de">
+<head>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h1>Projekte</h1>
   <ul>
     <li>Diese Website</li>
     <li>...Weitere Projekte folgen in Kürze...</li>
   </ul>
+</body>
+</html>
