--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
   <body>
     <header>
      <nav>
-  <a href="index.html">Home</a>
-  <a href="projekte.html">Projekte</a>
-  <a href="lebenslauf.html">Lebenslauf</a>
-  <a href="kontakt.html">Kontakt</a>
-     </nav>
+       <a href="index.html">Home</a>
+       <a href="projekte.html">Projekte</a>
+       <a href="lebenslauf.html">Lebenslauf</a>
+       <a href="kontakt.html">Kontakt</a>
+      </nav>
     </header>
     <h1>Willkommen auf meiner Website!</h1>
     <p>Hier stelle ich mich vor, zeige was ich so programmiertechnisch kann und gebe Ihnen einen Einblick, welche Projekte ich schon gemacht habe.</p>
     If you want to see my webpage in English please click 
-    <a href="/en/index.html">here.
-</a>
+    <a href="/en/index.html">here. (noch in Arbeit)</a>
   </body>
 </html>
