--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -6,9 +6,12 @@
 </head>
 <body>
    <header>
-   <a href="https://michaellestrassegger.github.io/my_resume/en/index.html">
-  <button>English</button>
-</a>
+     <nav>
+       <a href="index.html">Home</a>
+       <a href="projekte.html">Projekte</a>
+       <a href="lebenslauf.html">Lebenslauf</a>
+       <a href="kontakt.html">Kontakt</a>
+     </nav>
   </header>
   <h1>Mein Lebenslauf</h1>
   <p>Hi, ich bin eine Mutter von 2 kleinen Kindern und möchte einmal als Programmiererin arbeiten, so versuche ich meine Programmierkenntnisse zu erweitern. Alles an dem ich arbeite, wird man hier auf der Website sehen können.</p>
