--- a/projekte.html
+++ b/projekte.html
@@ -2,8 +2,17 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <title>Projekte</title>
 </head>
 <body>
+  <header>
+    <nav>
+       <a href="index.html">Home</a>
+       <a href="projekte.html">Projekte</a>
+       <a href="lebenslauf.html">Lebenslauf</a>
+       <a href="kontakt.html">Kontakt</a>
+      </nav>
+  </header>
   <h1>Projekte</h1>
   <ul>
     <li>Diese Website</li>
