--- a/projekte.html
+++ b/projekte.html
@@ -14,9 +14,28 @@
       </nav>
   </header>
   <h1>Projekte</h1>
-  <ul>
-    <li>Diese Website</li>
-    <li>...Weitere Projekte folgen in Kürze...</li>
-  </ul>
+  <table>
+    <thead>
+      <tr>
+        <th>Projektname</th>
+        <th>Schwerpunkte<th>
+        <th>Begonnen</th>
+        <th>Beendet</th>
+        <th>Schwierigkeit</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Meine Website</td>
+        <td>Übersicht meiner Kenntnisse</td>
+        <td>Juli 2025</td>
+        <td>Wird ständig aktualisiert (stand 02.08.2025)</td>
+        <td>Leicht - Beginner</td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <td colspan="4">Projekte gesamt: 1</td>
+    </tfoot>
+  </table>
 </body>
 </html>
