--- a/projekte.html
+++ b/projekte.html
@@ -13,6 +13,7 @@
        <a href="kontakt.html">Kontakt</a>
       </nav>
   </header>
+  <section>
   <h1>Projekte</h1>
   <table>
     <thead>
@@ -37,5 +38,6 @@
       <td colspan="4">Projekte gesamt: 1</td>
     </tfoot>
   </table>
+  </section>
 </body>
 </html>
