--- a/projekte.html
+++ b/projekte.html
@@ -15,27 +15,19 @@
   </header>
   <section>
   <h1>Projekte</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Projektname</th>
-        <th>Begonnen</th>
-        <th>Beendet</th>
-        <th>Schwierigkeit</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>Meine Website</td>
-        <td>Juli 2025</td>
-        <td>Wird ständig aktualisiert (stand 02.08.2025)</td>
-        <td>Leicht - Beginner</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <td colspan="4">Projekte gesamt: 1</td>
-    </tfoot>
-  </table>
+  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, welche ich bereits gemacht habe.</p>
+  </section>
+  <section>
+    <h2>Meine eigene Website gestalten</h2>
+    <p>Was braucht jede Arbeitnehmerin oder Programmiererin? Natürlich eine eigene Website mit den wichtigsten Kenntnissen, Eckpunkten und Kontakt zur Person. Diese Informationen sammle ich hier auf meiner Website
+und aktualisiere sie natürlich auch laufend. Da ich erst vor Kurzem mit meiner Reise zur Programmiererin gestartet bin, sind die Projekte hier noch nicht so aussagekräftig.</p>
+    <p><strong>Schwierigkeit: einfach bis mittel</strong></p>
+    <p>Startzeitpunkt: Juli 2025</p>
+  </section>
+  <section>
+    <h2>FreeCodeCamp.org</h2>
+    <p>Da ich hauptsächlich über die Website <a href="https://www.freecodecamp.org"><strong>FreeCodeCamp.org</strong></a> lerne, möchte ich diese tolle Lernplattform hier auch nicht unerwähnt lassen. Ich werde einige
+ Projekte davon, hier vorstellen, sobald ich representative Projekte erstellt habe.</p>
   </section>
 </body>
 </html>
