--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -16,7 +16,10 @@
   <h1>Mein Lebenslauf</h1>
   <p>Hi, ich bin eine Mutter von 2 kleinen Kindern und möchte einmal als Programmiererin arbeiten, so versuche ich meine Programmierkenntnisse zu erweitern. Alles an dem ich arbeite, wird man hier auf der Website sehen können.</p>
   <h2>Persönliche Informationen</h2>
-  <img src="images/myfoto.jpeg" alt="Foto of me" width="200" height="300">
+  <figure>
+    <img src="images/myfoto.jpeg" alt="Foto of me" width="200" height="300">
+    <figcaption>Hier bin ich!</figcaption>
+  </figure>
   <ul>
     <li>Ich komme aus Österreich.</li>
     <li>Ich bin verheiratet und habe 2 Kinder.</li>
