--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -13,18 +13,22 @@
        <a href="kontakt.html">Kontakt</a>
      </nav>
   </header>
-  <h1>Mein Lebenslauf</h1>
+  <section>
+    <h1>Mein Lebenslauf</h1>
   <p>Hi, ich bin eine Mutter von 2 kleinen Kindern und möchte einmal als Programmiererin arbeiten, so versuche ich meine Programmierkenntnisse zu erweitern. Alles an dem ich arbeite, wird man hier auf der Website sehen können.</p>
   <h2>Persönliche Informationen</h2>
   <figure>
     <img src="images/myfoto.jpeg" alt="Foto of me" width="200" height="300">
     <figcaption>Hier bin ich!</figcaption>
   </figure>
-  <ul>
+  </section>
+  <section>
+    <ul>
     <li>Ich komme aus Österreich.</li>
     <li>Ich bin verheiratet und habe 2 Kinder.</li>
   </ul>
-  
+  </section>
+  <section>
   <h2>Ausbildung</h2>
   <ul>
     <li>Volksschule 2001-2005</li>
@@ -33,7 +37,8 @@
     <li>HLW 2010-2012</li>
     <li>Berufsschule je 2 Monate SJ 2012/2013 und 2013/2014</li>
   </ul>
-
+  </section>
+  <section>
   <h2>Berufliche Kenntnisse</h2>
   <ul>
     <li>Ferienjob in einem Hotel***s im Sommer 2011</li>
@@ -46,14 +51,16 @@
     <li>Karenz ab 2018</li>
     <li>Mitarbeiterin in einem Autohaus 2024</li>
   </ul>
-
+  </section>
+  <section>
   <h2>Erfolge und Zusatzqualifikationen</h2>
   <ul>
     <li>sfa Sprachreisen - Englischkurs (english course)</li>
     <li>Landeslehrlingsmeisterschaft 2013 - erster Platz bei Hotel-und Gastgewerbeassistenten</li>
     <li>Staatsmeisterschaft 2013 teilgenommen</li>
   </ul>
-
+  </section>
+  <section>
   <h2>Sprachkenntnisse</h2>
   <ul>
     <li>Deutsch Muttersprache</li>
@@ -62,13 +69,15 @@
     <li>Italienisch Schulkenntnisse (1 Jahr und 1 Kurs)</li>
     <li>Spanisch Privatunterricht (6 Monate)</li>
   </ul>
-  
+  </section>
+  <section>
   <h2>Programmierkenntnisse</h2>
   <ul>
     <li>HTML & CSS</li>
     <!-- weitere hinzufügen -->
   </ul>
-
+  </section>
+  <section>
   <h2>Andere Qulifikationen</h2>
   <ul>
     <li>Führerschein B</li>
@@ -76,12 +85,14 @@
     <li>Gute Microsoft Office Kenntnisse</li>
     <li>Sehr gut bei der Rechtschreibung</li>
   </ul>
-
+  </section>
+  <section>
   <h2>Hobbys</h2>
   <ul>
     <li>Verschiedene Sportarten wie Klettern, Fahrad fahren, Schwimmen, Krafttraining, Laufen</li>
     <li>Buchfürung des Familienkontos</li>
     <li>PROGRAMMIEREN LERNEN</li>
   </ul>
+  </section>
 </body>
 </html>
