--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -2,6 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style.css">
   <title>Mein Lebenslauf</title>
 </head>
 <body>
