--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="styles.css">
-    <title> Willkommen auf meiner Website!</title>
+    <style>
+      body{
+        font-family: comic sans;
+        align: center;
+    </style>
+    <title> Michaelle Straßegger</title>
   </head>
   <body>
     <header>
