--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
-<!DOCTYPE>
+<!DOCTYPE html>
 <html lang="de">
   <head>
     <meta charset="utf-8">
+    <title>Meine Website</title>
     <link rel="stylesheet" href="styles.css">
-    <style>
-      body{
-        font-family: comic sans;
-        align: center;
-    </style>
-    <title> Michaelle Straßegger</title>
   </head>
   <body>
     <header>
