--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="de">
   <head>
     <meta charset="utf-8">
-    <title>Meine Website</title>
+    <title>Michaelle Straßegger</title>
+    <style>
+      body{
+        font-style: Comic Sans;
+        text-align: center;
+        background-img: url(https://images.unsplash.com/photo-1760627529541-b7f2a79fa283?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1470);
+    </style>
   </head>
   <body>
     <header>
      <nav>
        <a href="index.html">Home</a>
-       <a href="projekte.html">Projekte</a>
+       <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Projekte</a>
        <a href="lebenslauf.html">Lebenslauf</a>
        <a href="kontakt.html">Kontakt</a>
       </nav>
