--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Michaelle Straßegger</title>
     <style>
       body{
+        margin-top: 50px;
         font-style: Comic Sans;
         text-align: center;
-        background-img: url(https://images.unsplash.com/photo-1760627529541-b7f2a79fa283?ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&q=80&w=1470);
+        background-color: lightgrey;
       }
     </style>
   </head>
@@ -21,8 +22,9 @@
       </nav>
     </header>
     <h1>Willkommen auf meiner Website!</h1>
-    <p>Hier stelle ich mich vor, zeige was ich so programmiertechnisch kann und gebe Ihnen einen Einblick, welche Projekte ich schon gemacht habe.</p>
-    If you want to see my webpage in English please click 
-    <a href="/en/index.html">here. (noch in Arbeit)</a>
+    <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren Kindern. Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten
+  das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen. Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang
+  hat mich die Website <a href="https://www.freecodecamp.org">Freecodecamp.org</a> begleitet. Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
+    bisherigen Projekte bewundern. Natürlich wird die Seite immer wieder upgedated. Bald wird es auch eine internationale Website in englischer Sprache geben.</p>
   </body>
 </html>
