--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
      <nav>
        <a href="index.html">Home</a>
-       <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Projekte</a>
+       <a href="projekte.html">Projekte</a>
        <a href="lebenslauf.html">Lebenslauf</a>
        <a href="kontakt.html">Kontakt</a>
       </nav>
