--- a/projekte.html
+++ b/projekte.html
@@ -2,7 +2,6 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
   <title>Projekte</title>
 </head>
 <body>
@@ -15,8 +14,10 @@
       </nav>
   </header>
   <section>
-  <h1>Projekte</h1>
-  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, welche ich bereits gemacht habe.</p>
+  <h1>Meine Projekte</h1>
+  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> dort gibt es auch einige spannende Projekte welche ich 
+  schon gemacht habe.</p>
+    <button <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Klick doch mal rein!</a></button>
   </section>
   <section>
     <h2>Meine eigene Website gestalten</h2>
