--- a/projekte.html
+++ b/projekte.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Projekte</title>
+  <style>
+    body{
+        margin-top: 50px;
+        font-style: Comic Sans;
+        text-align: center;
+        background-color: lightgrey;
+      }
+  </style>
 </head>
 <body>
   <header>
@@ -15,21 +23,16 @@
   </header>
   <section>
   <h1>Meine Projekte</h1>
-  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> dort gibt es auch einige spannende Projekte welche ich 
+  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
   schon gemacht habe.</p>
-    <button <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Klick doch mal rein!</a></button>
+    <button <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a></button>
   </section>
   <section>
     <h2>Meine eigene Website gestalten</h2>
     <p>Was braucht jede Arbeitnehmerin oder Programmiererin? Natürlich eine eigene Website mit den wichtigsten Kenntnissen, Eckpunkten und Kontakt zur Person. Diese Informationen sammle ich hier auf meiner Website
 und aktualisiere sie natürlich auch laufend. Da ich erst vor Kurzem mit meiner Reise zur Programmiererin gestartet bin, sind die Projekte hier noch nicht so aussagekräftig.</p>
-    <p><strong>Schwierigkeit: einfach bis mittel</strong></p>
+    
     <p>Startzeitpunkt: Juli 2025</p>
-  </section>
-  <section>
-    <h2>FreeCodeCamp.org</h2>
-    <p>Da ich hauptsächlich über die Website <a href="https://www.freecodecamp.org"><strong>FreeCodeCamp.org</strong></a> lerne, möchte ich diese tolle Lernplattform hier auch nicht unerwähnt lassen. Ich werde einige
- Projekte davon, hier vorstellen, sobald ich representative Projekte erstellt habe.</p>
   </section>
 </body>
 </html>
