--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -2,7 +2,18 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body{
+        margin-top: 50px;
+        margin-left: 50px;
+        font-style: Comic Sans;
+        text-align: left;
+        background-color: lightgrey;
+      }
+    h1,h2{
+      text-align: center;
+    }
+  </style>
   <title>Mein Lebenslauf</title>
 </head>
 <body>
@@ -14,21 +25,16 @@
        <a href="kontakt.html">Kontakt</a>
      </nav>
   </header>
-  <section>
-    <h1>Mein Lebenslauf</h1>
-  <p>Hi, ich bin eine Mutter von 2 kleinen Kindern und möchte einmal als Programmiererin arbeiten, so versuche ich meine Programmierkenntnisse zu erweitern. Alles an dem ich arbeite, wird man hier auf der Website sehen können.</p>
+  <h1>Mein Lebenslauf</h1>
+  <br>
   <h2>Persönliche Informationen</h2>
-  <figure>
-    <img src="images/myfoto.jpeg" alt="Foto of me" width="200" height="300">
-    <figcaption>Hier bin ich!</figcaption>
-  </figure>
-  </section>
   <section>
     <ul>
     <li>Ich komme aus Österreich.</li>
     <li>Ich bin verheiratet und habe 2 Kinder.</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Ausbildung</h2>
   <ul>
@@ -39,6 +45,7 @@
     <li>Berufsschule je 2 Monate SJ 2012/2013 und 2013/2014</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Berufliche Kenntnisse</h2>
   <ul>
@@ -53,6 +60,7 @@
     <li>Mitarbeiterin in einem Autohaus 2024</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Erfolge und Zusatzqualifikationen</h2>
   <ul>
@@ -61,6 +69,7 @@
     <li>Staatsmeisterschaft 2013 teilgenommen</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Sprachkenntnisse</h2>
   <ul>
@@ -71,6 +80,7 @@
     <li>Spanisch Privatunterricht (6 Monate)</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Programmierkenntnisse</h2>
   <ul>
@@ -78,6 +88,7 @@
     <!-- weitere hinzufügen -->
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Andere Qulifikationen</h2>
   <ul>
@@ -87,12 +98,14 @@
     <li>Sehr gut bei der Rechtschreibung</li>
   </ul>
   </section>
+  <hr>
   <section>
   <h2>Hobbys</h2>
   <ul>
     <li>Verschiedene Sportarten wie Klettern, Fahrad fahren, Schwimmen, Krafttraining, Laufen</li>
     <li>Buchfürung des Familienkontos</li>
     <li>PROGRAMMIEREN LERNEN</li>
+    <li>Ernährung und Gesundheit</li>
   </ul>
   </section>
 </body>
