--- a/projekte.html
+++ b/projekte.html
@@ -10,6 +10,10 @@
         text-align: center;
         background-color: lightgrey;
       }
+    button{
+      font-size: 50px;
+      border: solid red;
+    }
   </style>
 </head>
 <body>
@@ -25,7 +29,7 @@
   <h1>Meine Projekte</h1>
   <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
   schon gemacht habe.</p>
-    <button <a href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a></button>
+    <button href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</button>
   </section>
   <section>
     <h2>Meine eigene Website gestalten</h2>
