--- a/projekte.html
+++ b/projekte.html
@@ -10,9 +10,10 @@
         text-align: center;
         background-color: lightgrey;
       }
-    button{
-      font-size: 50px;
-      border: solid red;
+    input{
+      font-size: 25px;
+      border: solid darkblue;
+      background-color: lightblue;
     }
   </style>
 </head>
@@ -29,7 +30,7 @@
   <h1>Meine Projekte</h1>
   <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
   schon gemacht habe.</p>
-    <button href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</button>
+    <input type="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</input>
   </section>
   <section>
     <h2>Meine eigene Website gestalten</h2>
