--- a/projekte.html
+++ b/projekte.html
@@ -10,7 +10,7 @@
         text-align: center;
         background-color: lightgrey;
       }
-    input{
+    .button{
       font-size: 25px;
       border: solid darkblue;
       background-color: lightblue;
@@ -29,7 +29,7 @@
   <h1>Meine Projekte</h1>
   <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
   schon gemacht habe.</p>
-    <input type="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</input>
+    <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a>
   </section>
   <section>
     <h2>Meine eigene Website gestalten</h2>
