--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Michaelle Straßegger</title>
     <style>
       body{
-        margin-top: 50 100 100 0;
+        margin: 50 100 50 100;
         font-style: Comic Sans;
         text-align: center;
         background-color: lightgrey;
