--- a/projekte.html
+++ b/projekte.html
@@ -14,6 +14,7 @@
       font-size: 25px;
       border: solid darkblue;
       background-color: lightblue;
+      padding: 10 10 10 10;
     }
   </style>
 </head>
