--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Michaelle Straßegger</title>
     <style>
       body{
-        margin: 50 100 50 100;
+        margin-top: 50;
+        margin-left: 100;
+        margin-right: 100;
         font-style: Comic Sans;
         text-align: center;
         background-color: lightgrey;
