--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -57,6 +57,7 @@
     <li>Postzustellerin 2016-2018</li>
     <li>Karenz ab 2018</li>
     <li>Mitarbeiterin in einem Autohaus 2024</li>
+    <li>Ausbildung zur Website-Programmiererin ab Juli 2025</li>
   </ul>
   </section>
   <hr>
