--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -6,7 +6,7 @@
     body{
         margin-top: 50px;
         margin-left: 100px;
-        font-style: Comic Sans;
+        font-style: Forum;
         text-align: left;
         background-color: lightgrey;
       }
