--- a/projekte.html
+++ b/projekte.html
@@ -6,7 +6,7 @@
   <style>
     body{
         margin-top: 50px;
-        font-style: Comic Sans;
+        font-style: Forum;
         text-align: center;
         background-color: lightgrey;
       }
