--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         margin-top: 50;
         margin-left: 100;
         margin-right: 100;
-        font-style: Comic Sans MS;
+        font-style: Forum;
         text-align: center;
         background-color: lightgrey;
       }
