--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Michaelle Straßegger</title>
     <style>
       body{
-        margin-top: 50;
-        margin-left: 100;
-        margin-right: 100;
+        margin-top: 50px;
+        margin-left: 200px;
+        margin-right: 200px;
         font-style: Forum;
         text-align: center;
         background-color: lightgrey;
