--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         text-align: center;
         background-color: lightgrey;
       }
+      nav{
+        text-align: left;
+      }
     </style>
   </head>
   <body>
