--- a/projekte.html
+++ b/projekte.html
@@ -6,6 +6,8 @@
   <style>
     body{
         margin-top: 50px;
+        margin-left: 200px;
+        margin-right: 200px;
         font-style: Forum;
         text-align: center;
         background-color: lightgrey;
@@ -14,7 +16,10 @@
       font-size: 25px;
       border: solid darkblue;
       background-color: lightblue;
-      padding: 10 10 10 10;
+      padding: 5px;
+    }
+    nav{
+      text-align: left;
     }
   </style>
 </head>
