--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -13,6 +13,9 @@
     h1{
       text-align: center;
     }
+    hr{
+      width: 50%;
+    }
   </style>
   <title>Mein Lebenslauf</title>
 </head>
