--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <style>
     body{
-        margin-top: 50px;
-        margin-left: 200px;
+        margin-top: 10%;
+        margin-left: 50%;
         font-style: Forum;
         text-align: left;
         background-color: lightgrey;
