--- a/projekte.html
+++ b/projekte.html
@@ -17,6 +17,7 @@
       border: solid darkblue;
       background-color: lightblue;
       padding: 5px;
+      transform: scale(1.1);
     }
     nav{
       text-align: left;
