--- a/projekte.html
+++ b/projekte.html
@@ -17,10 +17,15 @@
       border: solid darkblue;
       background-color: lightblue;
       padding: 5px;
+    }
+    .button:hover{
       transform: scale(1.1);
     }
     nav{
       text-align: left;
+    }
+    nav:hover{
+      transform: scale(1.1);
     }
   </style>
 </head>
