Enhance nav styles with hover effects

--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
       }
       nav{
         text-align: left;
+        text-decoration: none;
+        color: darkblue;
       }
+       nav:hover{
+      transform: scale(1.1);
+      border: solid blue;
+      border-radius: 10px;
+    }
     </style>
   </head>
   <body>
