--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -16,6 +16,16 @@
     hr{
       width: 50%;
     }
+    nav{
+        text-align: left;
+        text-decoration: none;
+        color: darkblue;
+      }
+       nav:hover{
+      transform: scale(1.1);
+      border: solid blue;
+      border-radius: 10px;
+    }
   </style>
   <title>Mein Lebenslauf</title>
 </head>
