--- a/projekte.html
+++ b/projekte.html
@@ -21,11 +21,15 @@
     .button:hover{
       transform: scale(1.1);
     }
-    nav{
-      text-align: left;
-    }
-    nav:hover{
+   nav{
+        text-align: left;
+        text-decoration: none;
+        color: darkblue;
+      }
+       nav:hover{
       transform: scale(1.1);
+      border: solid blue;
+      border-radius: 10px;
     }
   </style>
 </head>
