--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -4,8 +4,7 @@
   <meta charset="UTF-8">
   <style>
     body{
-        margin-top: 10%;
-        margin-left: 50%;
+        margin: 10% auto 0 auto;
         font-style: Forum;
         text-align: left;
         background-color: lightgrey;
