--- a/projekte.html
+++ b/projekte.html
@@ -26,16 +26,12 @@
         text-decoration: none;
         color: darkblue;
       }
-       nav:hover{
-      border: solid blue;
-      border-radius: 10px;
-    }
   </style>
 </head>
 <body>
   <header>
     <nav>
-       <a href="index.html">Home</a>
+       <a href="index.html"><i class="bi bi-house"></i></a>
        <a href="projekte.html">Projekte</a>
        <a href="lebenslauf.html">Lebenslauf</a>
       </nav>
