--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -30,7 +30,7 @@
 <body>
    <header>
      <nav>
-       <a href="index.html">Home</a>
+       <a href="index.html"><i class="bi bi-house"></i></a>
        <a href="projekte.html">Projekte</a>
        <a href="lebenslauf.html">Lebenslauf</a>
      </nav>
