--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <style>
     body{
-        margin: 10% auto 0 auto;
+        margin: 10% 200px 0 200px;
         font-style: Forum;
         text-align: left;
         background-color: lightgrey;
