--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -13,7 +13,8 @@
       text-align: center;
     }
     hr{
-      width: 50%;
+      max-width: 50%;
+      text-align: left;
     }
     nav{
         text-align: left;
