--- a/projekte.html
+++ b/projekte.html
@@ -46,9 +46,11 @@
     <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a>
   </section>
   <section>
-    <h2>Meine eigene Website gestalten</h2>
-    <p>Was braucht jede Arbeitnehmerin oder Programmiererin? Natürlich eine eigene Website mit den wichtigsten Kenntnissen, Eckpunkten und Kontakt zur Person. Diese Informationen sammle ich hier auf meiner Website
-und aktualisiere sie natürlich auch laufend. Da ich erst vor Kurzem mit meiner Reise zur Programmiererin gestartet bin, sind die Projekte hier noch nicht so aussagekräftig.</p>
+    <h2>Meine eigenen Projekte</h2>
+    <p>Natürlich ist es erst richtig spannend, wenn man seine eigenen Projekte starten kann. Da ich noch an der Grundlagen-Kenntnis arbeite, habe ich natürlich noch keine spannenden Ergebnisse vorzuweisen.</p>
+    <ol>
+      Projekt: <li>HIER - diese Website</li>
+    </ol>
     
     <p>Startzeitpunkt: Juli 2025</p>
   </section>
