--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         margin-right: 200px;
         font-style: Forum;
         text-align: center;
-        background-color: lightgrey;
+        background: linear-gradient(to right, red 20%, yellow 40%, blue 80%);
       }
       nav{
         text-align: left;
