--- a/projekte.html
+++ b/projekte.html
@@ -27,6 +27,9 @@
         text-decoration: none;
         color: darkblue;
       }
+    .own{
+      text-align: left;
+    }
   </style>
 </head>
 <body>
@@ -45,7 +48,7 @@
   schon gemacht habe.</p>
     <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a>
   </section>
-  <section>
+  <section class="own">
     <h2>Meine eigenen Projekte</h2>
     <p>Natürlich ist es erst richtig spannend, wenn man seine eigenen Projekte starten kann. Da ich noch an der Grundlagen-Kenntnis arbeite, habe ich natürlich noch keine spannenden Ergebnisse vorzuweisen.</p>
     <ol>
