--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         text-decoration: none;
         color: darkblue;
       }
-    
+      img{
+        max-width: 300px;
+        height: auto;
+        border-radius: 90px;
+      }
     </style>
   </head>
   <body>
@@ -31,6 +35,7 @@
       </nav>
     </header>
     <h1>Willkommen auf meiner Website!</h1>
+    <img src="IMG_0370.JPG" alt="Bild von Mir">
     <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren Kindern. Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten
   das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen. Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang
   hat mich die Website <a href="https://www.freecodecamp.org">Freecodecamp.org</a> begleitet. Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
