--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="utf-8">
     <title>Michaelle Straßegger</title>
     <style>
+      h1{
+        text-align: center;
+      }
       body{
         margin-top: 50px;
         margin-left: 200px;
         margin-right: 200px;
         font-style: Forum;
-        text-align: center;
+        text-align: left;
         background: linear-gradient(to right, lightpink, lightskyblue, plum, thistle);
       }
       nav{
@@ -21,6 +24,7 @@
         max-width: 300px;
         height: auto;
         border-radius: 90px;
+        text-align: right;
       }
     </style>
   </head>
