--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         margin-right: 200px;
         font-style: Forum;
         text-align: left;
-        background: linear-gradient(to right, lightpink, lightskyblue, plum, thistle);
+        background: linear-gradient(to right, lightpink, lightskyblue, lightplum, lightthistle);
       }
       nav{
         text-align: left;
