--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
         color: darkblue;
       }
       img{
-        max-width: 300px;
+        max-width: 200px;
         height: auto;
         border-radius: 90px;
-        text-align: right;
+        border: solid white 1px;
+        margin-left: 70%;
+        margin-right: auto;
       }
     </style>
   </head>
