--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         border: solid white 1px;
         margin-left: 70%;
         margin-right: auto;
+        filter: grayscale(70%);
       }
     </style>
   </head>
