--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         height: auto;
         border-radius: 90px;
         border: solid white 1px;
-        margin-left: 70%;
-        margin-right: auto;
         filter: grayscale(70%);
+        float: right;
       }
     </style>
   </head>
