--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -21,6 +21,10 @@
         text-decoration: none;
         color: darkblue;
       }
+    dt{
+      font-style: bold;
+      font-size: 20px;
+    }
   </style>
   <title>Mein Lebenslauf</title>
 </head>
