--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -46,7 +46,7 @@
     <dd>Lehrling in einem Hotel***** 2012-2014</dd>
     <dd>Lehrlingsaustausch für ein Monat in 2014</dd>
     <dd>Hotel-und Gastgewerbeassistentin in einem Hotel***** 2014-2015</dd>
-    <dd>Arbeiten in einem Tanzclub "das GEO" 2015</dd>
+    <dd>Arbeiten in einem Tanzclub 2015</dd>
     <dd>Hotel-und Gastgewerbeassistentin in einem Hotel****s 2015</dd>
     <dd>Postzustellerin 2016-2018</dd>
     <dd>Karenz ab 2018</dd>
