--- a/index.html
+++ b/index.html
@@ -40,11 +40,16 @@
        <a href="lebenslauf.html">Lebenslauf</a>
       </nav>
     </header>
-    <h1>Willkommen auf meiner Website!</h1>
-    <img src="https://raw.githubusercontent.com/michaellestrassegger/mywebsite/refs/heads/main/IMG_0370.JPEG">
-    <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren Kindern. Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten
-  das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen. Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang
-  hat mich die Website <a href="https://www.freecodecamp.org">Freecodecamp.org</a> begleitet. Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
+    <div>
+      <h1>Willkommen auf meiner Website!</h1>
+      <img src="https://raw.githubusercontent.com/michaellestrassegger/mywebsite/refs/heads/main/IMG_0370.JPEG">
+      <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren kleinen Kindern. Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten
+  das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen.</p>
+      <p>Im Jänner 2025 war es dann soweit, und ich habe die ersten kleinen Erfahrungen mit dem spannenden Programm <a href="https://www.schularena.com/ict/informatik/programmieren/karel">"Karel the robot"</a> gemacht. Hierbei handelt es sich um ein vereinfachtes Prinzip,
+        um das Programmieren und seine Prinzipien auf der Grundebene zu verstehen und zu erlernen.</p>
+      <p>Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang hat mich die Website <a href="https://www.freecodecamp.org">Freecodecamp.org</a> interessiert und begleitet.</p>
+      <p>Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
     bisherigen Projekte bewundern. Natürlich wird die Seite immer wieder upgedated. Bald wird es auch eine internationale Website in englischer Sprache geben.</p>
+  </div>
   </body>
 </html>
