--- a/index.html
+++ b/index.html
@@ -3,32 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Michaelle Straßegger</title>
-    <style>
-      h1{
-        text-align: center;
-      }
-      body{
-        margin-top: 50px;
-        margin-left: 200px;
-        margin-right: 200px;
-        font-style: Forum;
-        text-align: left;
-        background: linear-gradient(to right, lightpink, white, skyblue);
-      }
-      nav{
-        text-align: left;
-        text-decoration: none;
-        color: darkblue;
-      }
-      img{
-        max-width: 300px;
-        height: auto;
-        border-radius: 90px;
-        border: solid white 1px;
-        filter: grayscale(70%);
-        float: right;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <header>
