--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -2,19 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <style>
-    body{
-        margin: 10% 200px 0 200px;
-        font-style: Forum;
-        text-align: left;
-        background-color: lightgrey;
-      }
-    nav{
-        text-align: left;
-        text-decoration: none;
-        color: darkblue;
-      }
-  </style>
+  <link rel="stylesheet" href="styles.css">
   <title>Mein Lebenslauf</title>
 </head>
 <body>
