--- a/projekte.html
+++ b/projekte.html
@@ -3,34 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Projekte</title>
-  <style>
-    body{
-        margin-top: 50px;
-        margin-left: 200px;
-        margin-right: 200px;
-        font-style: Forum;
-        text-align: center;
-        background-color: lightgrey;
-      }
-    .button{
-      font-size: 25px;
-      border: solid darkblue;
-      background-color: lightblue;
-      padding: 5px;
-    }
-    .button:hover{
-      transform: scale(1.1);
-      background-color: yellow;
-    }
-   nav{
-        text-align: left;
-        text-decoration: none;
-        color: darkblue;
-      }
-    .own{
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
