--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -67,7 +67,7 @@
     <dd>Verschiedene Sportarten wie Klettern, Fahrad fahren, Schwimmen, Krafttraining, Laufen</dd>
     <dd>Buchfürung des Familienkontos</dd>
     <dd>PROGRAMMIEREN LERNEN</dd>
-    <dd>Ernährung und Gesundheit</dd>
+    <dd>Kochen, Gesunde Ernährung und Gesundheit</dd>
   </dl>
 </body>
 </html>
