--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -15,7 +15,8 @@
        <a href="lebenslauf.html">Lebenslauf</a>
      </nav>
   </header>
-  <h1>Mein Lebenslauf</h1>
+  <div>
+    <h1>Mein Lebenslauf</h1>
   <br>
   <dl>
     <dt><h2>Persönliche Informationen</h2></dt>
@@ -69,5 +70,6 @@
     <dd>PROGRAMMIEREN LERNEN</dd>
     <dd>Kochen, Gesunde Ernährung und Gesundheit</dd>
   </dl>
+  </div>
 </body>
 </html>
