--- a/projekte.html
+++ b/projekte.html
@@ -16,7 +16,8 @@
       </nav>
   </header>
   <section>
-  <h1>Meine Projekte</h1>
+  <div>
+<h1>Meine Projekte</h1>
   <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
   schon gemacht habe.</p>
     <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a>
@@ -30,5 +31,6 @@
     
     <p>Startzeitpunkt: Juli 2025</p>
   </section>
+</div>
 </body>
 </html>
