--- a/projekte.html
+++ b/projekte.html
@@ -15,22 +15,42 @@
        <a href="lebenslauf.html">Lebenslauf</a>
       </nav>
   </header>
-  <section>
+  
   <div>
-<h1>Meine Projekte</h1>
-  <p>Hier kannst du dir meine verschiedenen Projekte ansehen, unter anderem lerne ich ja auf der Website <a href="https://www.freecodecamp.org">www.freecodecamp.org</a>. Hier gibt es auch einige spannende Projekte welche ich 
-  schon gemacht habe.</p>
-    <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a>
-  </section>
-  <section class="own">
-    <h2>Meine eigenen Projekte</h2>
-    <p>Natürlich ist es erst richtig spannend, wenn man seine eigenen Projekte starten kann. Da ich noch an der Grundlagen-Kenntnis arbeite, habe ich natürlich noch keine spannenden Ergebnisse vorzuweisen.</p>
-    <ol>
-      Projekt: <li>HIER - diese Website</li>
-    </ol>
-    
-    <p>Startzeitpunkt: Juli 2025</p>
-  </section>
+    <h1>Meine Projekte</h1>
+    <p>Jede Entwicklerin und Selbststudierende braucht eine Art Portfolio oder Reputation, eine Projektmappe um zeigen zu können, was man kann und was man noch lernen muss. Auch für zukünftige ArbeitgeberInnen ist es interessant
+      wenn nicht sogar notwendig, die Fähigkeiten und Arbeiten ihrer zukünftigen Mitarbeiterin zu kennen.<p>
+    <dl>
+      <dt>FreeCodeCamp-Projekte</dt>
+      <dd>Hier kannst du dir meine verschiedenen Projekte ansehen, welche ich auf <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gemacht habe. Diese Website hat mir schon sehr viel beigebracht, und es gibt
+        dort einige sehr spannende Projekte zu machen. Manche wurden mit Schritt-für-Schritt Anleitung gemacht, andere waren "Freie Projekte" mit einer Angabe und einer leeren Boilerplate</dd>
+    </dl>
+    <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a> 
+      <dl>
+        <dt>Meine eigenen Projekte</dt>
+        <dd>Natürlich wird es erst richtig interessant, wenn man seine ganz eigenen Projekte beginnt. Hier findest du alle Projekte und Ideen, welche ich alleine entworfen und gecoded habe.</dd>  
+    </dl>
+    <table>
+      <thead>     
+        <tr>
+          <th>Projektname</th>
+          <th>Idee</th>
+          <th>Zeitraum</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Eigene Website</td>
+          <td>Überblick über alle Kenntnisse, Sammlung meiner Projekte, Lebenslauf und erstes eigenes Projekt</td>
+          <td>seit Juli 2025</td>
+        </tr>
+         <tfoot>
+        <tr>
+          <td colspan="2">Projekte gesamt</td>
+          <td>1</td>
+        </tr>
+      </tfoot>
+    </table>
 </div>
 </body>
 </html>
