--- a/index.html
+++ b/index.html
@@ -18,13 +18,18 @@
     <div>
       <h1>Willkommen auf meiner Website!</h1>
       <img src="https://raw.githubusercontent.com/michaellestrassegger/mywebsite/refs/heads/main/IMG_0370.JPEG">
-      <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren kleinen Kindern. Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten
-  das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen.</p>
-      <p>Im Jänner 2025 war es dann soweit, und ich habe die ersten kleinen Erfahrungen mit dem spannenden Programm <a href="https://www.schularena.com/ict/informatik/programmieren/karel">"Karel the robot"</a> gemacht. Hierbei handelt es sich um ein vereinfachtes Prinzip,
+      <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren kleinen Kindern. Das Familienleben und die Zeit mit meinen Kindern genieße ich sehr, jedoch fehlte mir lange eine sinnvolle Möglichkeit meine wenige
+        freie Zeit zu nutzen. Mein Mann arbeitet in einem Schichtbetrieb und muss deshalb sehr unterschiedlich arbeiten, was zeitlich leider keinen Raum für fixe Termine lässt. Ich habe, wie in meinem Lebenslauf ersichtlich,
+      bereits wieder versucht zu arbeiten, doch auch wenn sich das durch das Entgegenkommens der Firma zeitlich ausging, war es leider nicht die erfüllende Arbeit die mein Geist sich wünschte.</p>
+      <br>
+      <p>Bereits seit jungen Jahren beschäftige ich mich mit Computer und Technik. Besonders interessant fand ich immer das bearbeiten von Dokumenten, das erstellen von Tabellen und das programmieren von einzelnen Folien von Powerpoint Präsentationen. Im Jänner 2025 war es dann soweit, und ich habe die ersten kleinen Erfahrungen mit dem spannenden Programm <a href="https://www.schularena.com/ict/informatik/programmieren/karel">"Karel the robot"</a> gemacht. Hierbei handelt es sich um ein vereinfachtes Prinzip,
         um das Programmieren und seine Prinzipien auf der Grundebene zu verstehen und zu erlernen.</p>
-      <p>Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang hat mich die Website <a href="https://www.freecodecamp.org">Freecodecamp.org</a> interessiert und begleitet.</p>
+      <br>
+      <p>Seit Juli 2025 habe ich endlich Bekanntschaft mit dem Programmieren und Gestalten von Websiten begonnen. Schon am Anfang hat mich die Website <a href="https://www.freecodecamp.org" _blank>Freecodecamp.org</a> interessiert und begleitet.
+      Wenn du an meinen Projekten, welche ich über diese Website gemacht habe interessiert bist, klicke doch mal <a href="projekte.html">HIER</a>.</p>
+      <br>
       <p>Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
-    bisherigen Projekte bewundern. Natürlich wird die Seite immer wieder upgedated. Bald wird es auch eine internationale Website in englischer Sprache geben.</p>
+    bisherigen Projekte bewundern. Natürlich wird die Seite immer wieder upgedated. Alle spannenden Ideen, die ich so bald wie möglich in Angriff nehmen möchte, findest du HIER.</p>
   </div>
   </body>
 </html>
