--- a/projekte.html
+++ b/projekte.html
@@ -21,13 +21,13 @@
     <p>Jede Entwicklerin und Selbststudierende braucht eine Art Portfolio oder Reputation, eine Projektmappe um zeigen zu können, was man kann und was man noch lernen muss. Auch für zukünftige ArbeitgeberInnen ist es interessant
       wenn nicht sogar notwendig, die Fähigkeiten und Arbeiten ihrer zukünftigen Mitarbeiterin zu kennen.<p>
     <dl>
-      <dt>FreeCodeCamp-Projekte</dt>
+      <dt><h2>FreeCodeCamp-Projekte</h2></dt>
       <dd>Hier kannst du dir meine verschiedenen Projekte ansehen, welche ich auf <a href="https://www.freecodecamp.org">www.freecodecamp.org</a> gemacht habe. Diese Website hat mir schon sehr viel beigebracht, und es gibt
         dort einige sehr spannende Projekte zu machen. Manche wurden mit Schritt-für-Schritt Anleitung gemacht, andere waren "Freie Projekte" mit einer Angabe und einer leeren Boilerplate</dd>
     </dl>
     <a type="button" class="button" href="https://michaellestrassegger.github.io/Projekte_freecodecamp/">Freecodecamp.org Projekte</a> 
       <dl>
-        <dt>Meine eigenen Projekte</dt>
+        <dt><h2>Meine eigenen Projekte</h2></dt>
         <dd>Natürlich wird es erst richtig interessant, wenn man seine ganz eigenen Projekte beginnt. Hier findest du alle Projekte und Ideen, welche ich alleine entworfen und gecoded habe.</dd>  
     </dl>
     <table>
