--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -26,6 +26,7 @@
     </header>
   <div>
     <h1>Mein Lebenslauf</h1>
+    <img src="https://github.com/michaellestrassegger/mywebsite/blob/main/Polish_20230724_073139073_Original.JPEG">
   <br>
   <dl>
     <dt><h2>Persönliche Informationen</h2></dt>
