--- a/ideen.html
+++ b/ideen.html
@@ -24,6 +24,7 @@
     </header>
   <body>
     <h1>Meine Ideen für zukünftige Projekte</h1>
+    <img src="https://github.com/michaellestrassegger/mywebsite/blob/main/Polish_20230724_073139073_Original.JPEG">
     <table>
       <thead>     
         <tr>
