--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <div>
       <h1>Willkommen auf meiner Website!</h1>
-      <img src="https://github.com/michaellestrassegger/mywebsite/blob/main/Polish_20230724_073139073_Original.JPEG">
+      <img src="Polish_20230724_073139073_Original.JPEG">
       <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren kleinen Kindern. Das Familienleben und die Zeit mit meinen Kindern genieße ich sehr, jedoch fehlte mir lange eine sinnvolle Möglichkeit meine wenige
         freie Zeit zu nutzen. Mein Mann arbeitet in einem Schichtbetrieb und muss deshalb sehr unterschiedlich arbeiten, was zeitlich leider keinen Raum für fixe Termine lässt. Ich habe, wie in meinem Lebenslauf ersichtlich,
       bereits wieder versucht zu arbeiten, doch auch wenn sich das durch das Entgegenkommens der Firma zeitlich ausging, war es leider nicht die erfüllende Arbeit die mein Geist sich wünschte.</p>
