--- a/links.html
+++ b/links.html
@@ -26,7 +26,7 @@
     </header>
     
       <h1>Hilfreiche Links</h1>
-      <img src="https://github.com/michaellestrassegger/mywebsite/blob/main/Polish_20230724_073139073_Original.JPEG">
+      <img src="Polish_20230724_073139073_Original.JPEG">
       <p>Hier findest du alle Links von hilfreichen Websites, welche ich gerne für meine Projekte benutze.</p>
       <br>
       <div>
