--- a/projekte.html
+++ b/projekte.html
@@ -27,7 +27,7 @@
   
   <div>
     <h1>Meine Projekte</h1>
-    <img src="https://github.com/michaellestrassegger/mywebsite/blob/main/Polish_20230724_073139073_Original.JPEG">
+    <img src="Polish_20230724_073139073_Original.JPEG">
     <p>Jede Entwicklerin und Selbststudierende braucht eine Art Portfolio oder Reputation, eine Projektmappe um zeigen zu können, was man kann und was man noch lernen muss. Auch für zukünftige ArbeitgeberInnen ist es interessant
       wenn nicht sogar notwendig, die Fähigkeiten und Arbeiten ihrer zukünftigen Mitarbeiterin zu kennen.<p>
     <dl>
