--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a href="links.html">@</a>
       </nav>
     </header>
-    <div>
+    <body>
       <h1>Willkommen auf meiner Website!</h1>
       <img src="Polish_20230724_073139073_Original.JPEG">
       <p>Ich bin Michaelle Straßegger, 30 Jahre jung und Mutter von 2 wunderbaren kleinen Kindern. Das Familienleben und die Zeit mit meinen Kindern genieße ich sehr, jedoch fehlte mir lange eine sinnvolle Möglichkeit meine wenige
@@ -39,6 +39,6 @@
       <br>
       <p>Ich lerne fleißig neue Befehle und Gestaltungsmöglichkeiten. Auf dieser Website kannst du meinen Fortschritt verfolgen und meine
     bisherigen Projekte bewundern. Natürlich wird die Seite immer wieder upgedated. Alle spannenden Ideen, die ich so bald wie möglich in Angriff nehmen möchte, findest du <a href="ideen.html">HIER</a>.</p>
-  </div>
+  
   </body>
 </html>
