--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -24,7 +24,7 @@
         <a href="links.html">@</a>
       </nav>
     </header>
-  <div>
+  <body>
     <h1>Mein Lebenslauf</h1>
     <img src="Polish_20230724_073139073_Original.JPEG">
   <br>
@@ -80,6 +80,6 @@
     <dd>PROGRAMMIEREN LERNEN</dd>
     <dd>Kochen, Gesunde Ernährung und Gesundheit</dd>
   </dl>
-  </div>
+  
 </body>
 </html>
