--- a/projekte.html
+++ b/projekte.html
@@ -25,7 +25,7 @@
       </nav>
     </header>
   
-  <div>
+  <body>
     <h1>Meine Projekte</h1>
     <img src="Polish_20230724_073139073_Original.JPEG">
     <p>Jede Entwicklerin und Selbststudierende braucht eine Art Portfolio oder Reputation, eine Projektmappe um zeigen zu können, was man kann und was man noch lernen muss. Auch für zukünftige ArbeitgeberInnen ist es interessant
@@ -61,6 +61,6 @@
         </tr>
       </tfoot>
     </table>
-</div>
+
 </body>
 </html>
