--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -49,6 +49,7 @@
     <dd>Hotel-und Gastgewerbeassistentin in einem Hotel****s 2015</dd>
     <dd>Postzustellerin 2016-2018</dd>
     <dd>Karenz ab 2018</dd>
+    <dd>Mitarbeiterin eines ehrenamtlichen Teams für die Spiegel-Spielgruppe Sept.2023 - Sept.2024</dd>
     <dd>Mitarbeiterin in einem Autohaus 2024</dd>
     <dd>Ausbildung zur Website-Programmiererin ab Juli 2025</dd>
     
@@ -56,6 +57,8 @@
     <dd>sfa Sprachreisen - Englischkurs (english course)</dd>
     <dd>Landeslehrlingsmeisterschaft 2013 - erster Platz bei Hotel-und Gastgewerbeassistenten</dd>
     <dd>Staatsmeisterschaft 2013 teilgenommen</dd>
+    <dd>Elternvertreterin im Kindergarten 2025/2026</dd>
+    <dd>Mitglied im Vorstand des Elternvereins der Volkschule</dd>
     
     <dt><h2>Sprachkenntnisse</h2></dt>
     <dd>Deutsch Muttersprache</dd>
