--- a/lebenslauf.html
+++ b/lebenslauf.html
@@ -58,7 +58,7 @@
     <dd>Landeslehrlingsmeisterschaft 2013 - erster Platz bei Hotel-und Gastgewerbeassistenten</dd>
     <dd>Staatsmeisterschaft 2013 teilgenommen</dd>
     <dd>Elternvertreterin im Kindergarten 2025/2026</dd>
-    <dd>Mitglied im Vorstand des Elternvereins der Volkschule</dd>
+    <dd>Vorstandsmitglied des Elternvereins der Volkschule</dd>
     
     <dt><h2>Sprachkenntnisse</h2></dt>
     <dd>Deutsch Muttersprache</dd>
