--- a/links.html
+++ b/links.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Hilfreiche Links</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
